Monday am -- issue with restaurant details, header / footer / inside alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ img {
 body {
 	background-color: #fdfdfd;
 	margin: 0;
-	position:relative;
+	position: relative;
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
@@ -67,8 +67,7 @@ nav {
   height: 80px;
   background-color: #252831;
   text-align:center;
-  /* SP added:  flexbox to 
-  vertically align header text */;
+  /* SP added: vertically align header text */;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -91,12 +90,10 @@ nav h1 a {
     margin: 0;
     width: calc(50% - 80px);
 }
-
 /* Display list items side by side */
 #breadcrumb li {
     display: inline;
 }
-
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
     padding: 8px;
@@ -240,20 +237,23 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
-header {
+.inside header {
   position: fixed;
   top: 0;
-  width: 100%;
   z-index: 1000;
+  display: flex;
+  flex-wrap: wrap; 
+  width: 100%;
 }
 /* SP added flexbox to main container */
 @media screen and (max-width: 999px) {
-  #maincontent {
+  .inside #maincontent {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    width: 100%;
   }
-  #map-container {
+  .inside #map-container {
     background: blue none repeat scroll 0 0;
     height: 300px;
     position: relative;
@@ -261,13 +261,17 @@ header {
     top: 130px;
     width: 100%;
   }  
-  #restaurant-container {
+  .inside #restaurant-container {
     order: 2; 
     width: 100%;
   }
-  #reviews-container {
-    order: 3; 
+  .inside #reviews-container {
+    order: 3;
     width: 100%;
+  }
+  .inside #restaurant-img {
+    height: auto;
+    width: 90%;
   }
 }
 @media screen and (min-width: 1000px) {
@@ -279,11 +283,14 @@ header {
     top: 80px;
     width: 50%;
   }
-  #restaurant-container {
-    width: 50%;
+  .inside #restaurant-container {
+    width: 42%;
   }
-  #reviews-container {
-    width: 50%;
+  .inside #reviews-container {
+    width: 42%;
+  }
+  .inside #restaurant-img {
+    width: 90%;
   }
 }
 .inside #map {
@@ -307,9 +314,6 @@ header {
   text-transform: uppercase;
   line-height: 1.1;
 }
-#restaurant-img {
-	width: 90%;
-}
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
@@ -326,14 +330,15 @@ header {
   text-transform: uppercase;
 	width: 90%;
 }
-#restaurant-container, #reviews-container {
+#restaurant-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
 }
 #reviews-container {
-  /* SP adjusted RH padding */
-  padding: 30px 40px 30px;
+  border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid #fff;
+  padding: 30px 40px 80px;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -345,7 +350,7 @@ header {
 #reviews-list {
   margin: 0;
   padding: 0;
-  /* SP add: flexbox */
+  /* SP add: flexbox*/
   display: flex;
   flex-wrap: wrap;
 }
